; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_prune-packed.c_cmd_prune_packed.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_prune-packed.c_cmd_prune_packed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32 }

@PRUNE_PACKED_VERBOSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"dry-run\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"dry run\00", align 1
@PRUNE_PACKED_DRY_RUN = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i8] c"quiet\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"be quiet\00", align 1
@prune_packed_usage = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [19 x i8] c"too many arguments\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_prune_packed(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [3 x %struct.option], align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = call i64 @isatty(i32 2)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @PRUNE_PACKED_VERBOSE, align 4
  br label %14

13:                                               ; preds = %3
  br label %14

14:                                               ; preds = %13, %11
  %15 = phi i32 [ %12, %11 ], [ 0, %13 ]
  store i32 %15, i32* %7, align 4
  %16 = getelementptr inbounds [3 x %struct.option], [3 x %struct.option]* %8, i64 0, i64 0
  %17 = call i32 @N_(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i32, i32* @PRUNE_PACKED_DRY_RUN, align 4
  %19 = call i32 @OPT_BIT(i8 signext 110, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %7, i32 %17, i32 %18)
  %20 = getelementptr inbounds %struct.option, %struct.option* %16, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = getelementptr inbounds %struct.option, %struct.option* %16, i64 1
  %22 = call i32 @N_(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %23 = load i32, i32* @PRUNE_PACKED_VERBOSE, align 4
  %24 = call i32 @OPT_NEGBIT(i8 signext 113, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32* %7, i32 %22, i32 %23)
  %25 = getelementptr inbounds %struct.option, %struct.option* %21, i32 0, i32 0
  store i32 %24, i32* %25, align 4
  %26 = getelementptr inbounds %struct.option, %struct.option* %21, i64 1
  %27 = call i32 (...) @OPT_END()
  %28 = getelementptr inbounds %struct.option, %struct.option* %26, i32 0, i32 0
  store i32 %27, i32* %28, align 4
  %29 = load i32, i32* %4, align 4
  %30 = load i8**, i8*** %5, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = getelementptr inbounds [3 x %struct.option], [3 x %struct.option]* %8, i64 0, i64 0
  %33 = load i32, i32* @prune_packed_usage, align 4
  %34 = call i32 @parse_options(i32 %29, i8** %30, i8* %31, %struct.option* %32, i32 %33, i32 0)
  store i32 %34, i32* %4, align 4
  %35 = load i32, i32* %4, align 4
  %36 = icmp sgt i32 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %14
  %38 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  %39 = load i32, i32* @prune_packed_usage, align 4
  %40 = getelementptr inbounds [3 x %struct.option], [3 x %struct.option]* %8, i64 0, i64 0
  %41 = call i32 @usage_msg_opt(i32 %38, i32 %39, %struct.option* %40)
  br label %42

42:                                               ; preds = %37, %14
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @prune_packed_objects(i32 %43)
  ret i32 0
}

declare dso_local i64 @isatty(i32) #1

declare dso_local i32 @OPT_BIT(i8 signext, i8*, i32*, i32, i32) #1

declare dso_local i32 @N_(i8*) #1

declare dso_local i32 @OPT_NEGBIT(i8 signext, i8*, i32*, i32, i32) #1

declare dso_local i32 @OPT_END(...) #1

declare dso_local i32 @parse_options(i32, i8**, i8*, %struct.option*, i32, i32) #1

declare dso_local i32 @usage_msg_opt(i32, i32, %struct.option*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @prune_packed_objects(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
